v1.2.27 Update members tab info. Add 1 new member (card + photo). Edit 1 member photo to be inline with the others. Fix a mobile layout issue on S9 page.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -899,11 +899,14 @@ progress {
 
 .col-12 {
     flex: 0 0 auto;
-    /* width: 100% */
+    width: 100%
 }
 
 .col-13 {
-    flex: 0 0 auto;
+    display: none;
+}
+
+.col-14 {
     display: none;
 }
 
@@ -1553,6 +1556,7 @@ progress {
 
     .col-lg-13 {
         flex: 0 0 auto;
+        display: block;
         /* width: 150% */
         grid-column: 1
     }
@@ -1589,19 +1593,6 @@ progress {
         .col-lg-16,
         .col-lg-13,
         .col-lg-14 {
-            flex: 0 0 auto;
-            display: none;
-        }
-    }
-
-    @media (max-width: 1320px){
-        .col-lg-15 {
-            flex: 0 0 auto;
-            display: block;
-            width: 100%;
-            height: 100%
-        }
-        .col-lg-16 {
             flex: 0 0 auto;
             display: none;
         }
